multicluster-ingress/zone_printer/deployment.yaml

# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_multicluster_ingress_zone_printer_deployment_zoneprinter]
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: zoneprinter
  name: zoneprinter
spec:
  selector:
    matchLabels:
      app: zoneprinter
  template:
    metadata:
      labels:
        app: zoneprinter
    spec:
      containers:
      - image: gcr.io/google-samples/zone-printer:0.1
        name: frontend
        ports:
        - containerPort: 80
# [END istio_multicluster_ingress_zone_printer_deployment_zoneprinter]
---
