multicluster-ingress/zone_printer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  type: ClusterIP
  selector:
    app: zoneprinter
  ports:
  - name: http
    port: 80
    targetPort: 80
