multicluster-ingress/zone_printer/gateway.yaml

# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_multicluster_ingress_zone_printer_gateway_zoneprinter_gateway]
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: zoneprinter-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
# [END istio_multicluster_ingress_zone_printer_gateway_zoneprinter_gateway]
---
