multicluster-ingress/zone_printer/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zoneprinter-vs
spec:
  hosts:
  - "*"
  gateways:
  - zoneprinter-gateway
  http:
  - route:
    - destination:
        host: zoneprinter
        port:
          number: 80
